IDENTIFIER 98 - Upgrade to java 17 and some other refactoring (#87)
* Upgrade in progress

* Fixing tests

* Some more adjustments

* Rollback WebClient and some other adjustiments

* Fix springutils imports